// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basicModule 1`] = `
"/**
 * DO NOT MANUALLY EDIT; this file is fully generated.
 *
 * SOURCE<<TEST>>
 * SIGNED<<qM9bD7Gme4RVDyMsy0xUeFUsClmjBtMUCyRMxGjrWyiChUt2BtrEKtGCgUtxsLT0mDAXzAc+3vdeYI7s/23q2g==>>
 */

export const exportedVariable: string;
const immutableVariable: string | undefined = \\"TEST\\";
let immutableVariable: number | null = 1;
"
`;

exports[`emptyModule 1`] = `
"/**
 * DO NOT MANUALLY EDIT; this file is fully generated.
 *
 * SOURCE<<TEST>>
 * SIGNED<<AWuoxM/eZa+Zy1+ouKN+Lrc/SBs640mRZm3y4E/rbAOGZuvR7CtvYjlndWAzxwLd5fQj99R6tu0YJ/9TeDcx9w==>>
 */

"
`;
